Bug 1697769 - Apply implicit pointer capture only for pointer events that are generated from the touch events; r=smaug

Pointer capture would override the capturing content set in PresShell for mouse
event, it isn't affect touch event because dispatching touch event would take
the capturing content in PresShell into account, i.e.
https://searchfox.org/mozilla-central/rev/fa48ebee58d59fa846919c3e2c3122b08db57c9c/layout/base/PresShell.cpp#8712-8719

Touch input isn't always generating a touch event, but a compabitility mouse
event with the touch as inputsource, e.g. chrome popup window on Windows platform,
see https://searchfox.org/mozilla-central/rev/3de2db87f3c9001ae478318d47a2ca3427574382/widget/windows/nsWindow.cpp#8130-8134
In such case, we don't apply implicit pointer capture to prevent the capturing
content set in PresShell being overried which could cause the drag to scroll
doesn't work.

Differential Revision: https://phabricator.services.mozilla.com/D111085